--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Corey-Recai/trade_bot#readme",
   "dependencies": {
     "socket.io": "^4.1.2",
-    "ws": "^7.4.6"
+    "ws": "^7.4.6",
+    "wscat": "^4.0.1"
   }
 }
